<?xml version="1.0"?>
<package format="2">
    <name>rtk_recording_sample</name>
    <version>0.1.0</version>
    <description>The singgo template sample node package</description>

    <maintainer email="your_name@cambricon.com">your_name</maintainer>
    <license>Cambricon SingGo</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosbag</build_depend>
    <depend>roscpp</depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
